APP03022-mrch-bff-somx-ppsomx-util/kustomization/production/workload-identity.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ${PROJECT_NAME}

spec:
  template:
    spec:
      serviceAccountName: ${WORLOAD_IDENTITY_PROD}
      automountServiceAccountToken: false

      containers:
        - name: ${PROJECT_NAME}

          resources:
            requests:
              cpu: "150m"
              memory: "512Mi"
              ephemeral-storage: "100Mi"
            limits:
              memory: "1Gi"
              ephemeral-storage: "500Mi"
